<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">


    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:text="@string/novo_departamento"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewNovoDepartamento"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:textColor="#FFFFFF"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="36dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/ediTextNomeDepartamento"
                    app:layout_constraintVertical_bias="0.21"/>

            <EditText
                    android:id="@+id/ediTextNomeDepartamento"
                    android:layout_width="0dp"
                    android:layout_height="67dp"
                    android:inputType="textPersonName|textCapSentences"
                    android:hint="@string/nome"
                    android:textColorHint="@color/colorWhite"
                    android:ems="10"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="60dp"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:textColor="#FFFFFF"
                    app:layout_constraintBottom_toTopOf="@+id/ediTextSiglaDepartamento"
            />

            <EditText
                    android:id="@+id/ediTextSiglaDepartamento"
                    android:layout_width="0dp"
                    android:layout_height="67dp"
                    android:inputType="textPersonName|textCapSentences"
                    android:hint="@string/sigla"
                    android:textColorHint="@color/colorWhite"
                    android:ems="10"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:textColor="#FFFFFF"
                    android:layout_marginBottom="60dp"
                    app:layout_constraintBottom_toTopOf="@+id/buttonSalvarDepartamento"
            />

            <Button
                    android:text="@string/salvar"
                    android:layout_width="192dp"
                    android:layout_height="51dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/buttonSalvarDepartamento"
                    android:background="@drawable/button_customized_depto"
                    app:layout_constraintHorizontal_bias="0.497"
                    android:textColor="#FFFFFF"
                    android:textAllCaps="false"
                    app:layout_constraintBottom_toTopOf="@+id/buttonCancelarDepartamento"
                    android:layout_marginBottom="28dp"/>

            <Button
                    android:text="@string/cancelar"
                    android:layout_width="192dp"
                    android:layout_height="51dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/buttonCancelarDepartamento"
                    android:background="@drawable/button_customized_depto"
                    android:layout_marginBottom="96dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    android:textColor="#FFFFFF"
                    android:textAllCaps="false"/>
        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>