<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".ui.activity.DepartamentoUpdateActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true" tools:layout_editor_absoluteY="147dp" tools:layout_editor_absoluteX="403dp">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:text="@string/atualizar_departamento"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewAtualizarDepartamento"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:textColor="#FFFFFF"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="36dp" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/editTextNomeDepartamentoUpdate"
                    app:layout_constraintVertical_bias="0.06"/>

            <EditText
                    android:id="@+id/editTextNomeDepartamentoUpdate"
                    android:layout_width="0dp"
                    android:layout_height="67dp"
                    android:inputType="textPersonName"
                    android:hint="@string/nome"
                    android:textColorHint="@color/colorWhite"
                    android:ems="10"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="60dp"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:textColor="#FFFFFF"
                    app:layout_constraintBottom_toTopOf="@+id/editTextSiglaDepartamentoUpdate"
            />

            <EditText
                    android:id="@+id/editTextSiglaDepartamentoUpdate"
                    android:layout_width="0dp"
                    android:layout_height="67dp"
                    android:inputType="textPersonName|textCapSentences"
                    android:hint="@string/sigla"
                    android:textColorHint="@color/colorWhite"
                    android:ems="10"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:textColor="#FFFFFF"
                    android:layout_marginBottom="60dp"
                    app:layout_constraintBottom_toTopOf="@+id/buttonAtualizarDepartamento"
            />

            <Button
                    android:text="@string/atualizar"
                    android:layout_width="192dp"
                    android:layout_height="51dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/buttonAtualizarDepartamento"
                    android:background="@drawable/button_customized_depto"
                    app:layout_constraintHorizontal_bias="0.497"
                    android:textColor="#FFFFFF"
                    android:textAllCaps="false"
                    app:layout_constraintBottom_toTopOf="@+id/buttonDeletarDepartamento"
                    android:layout_marginBottom="28dp"/>

            <Button
                    android:text="@string/deletar"
                    android:layout_width="192dp"
                    android:layout_height="51dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/buttonDeletarDepartamento"
                    android:background="@drawable/button_customized_depto"
                    android:layout_marginBottom="96dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    android:textColor="#FFFFFF"
                    android:textAllCaps="false"/>
        </android.support.constraint.ConstraintLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>