<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        tools:context=".ui.adapters.AdapterFunc"
        android:background="@color/colorPrimary">

    <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="112dp"
            android:background="@drawable/button_adapter"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" android:layout_marginTop="8dp">

        <TextView
                android:text="@string/nome"
                android:textSize="18sp"
                android:textColor="@color/colorWhite"
                android:layout_width="109dp"
                android:layout_height="27dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                android:id="@+id/textViewNomeAdapterFunc" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="24dp" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/textViewRgAdapterFunc" app:layout_constraintHorizontal_bias="0.0"/>
        <TextView
                android:text="@string/rg_funcionario"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewRgAdapterFunc" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginTop="24dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:text="@string/novo_departamento"
                android:textSize="18sp"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                android:id="@+id/textViewDeptoAdapter" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginBottom="24dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textViewNomeAdapterFunc"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>