<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".ui.activity.FuncionarioUpdateActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:text="@string/atualizar_funcion_rio"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewFuncUp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:textColor="#FFFFFF"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="36dp" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/editTextNomeFuncUp" app:layout_constraintVertical_bias="0.009"
                    app:layout_constraintHorizontal_bias="0.51"/>

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="67dp"
                    android:inputType="textPersonName"
                    android:hint="@string/nome"
                    android:textColorHint="@color/colorWhite"
                    android:ems="10"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:id="@+id/editTextNomeFuncUp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="24dp" app:layout_constraintBottom_toTopOf="@+id/editTextRgFuncUp"
                    app:layout_constraintHorizontal_bias="1.0" android:textColor="#FFFFFF"/>

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="67dp"
                    android:inputType="textPersonName"
                    android:hint="@string/rg"
                    android:textColorHint="@color/colorWhite"
                    android:ems="10"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:id="@+id/editTextRgFuncUp" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0" android:textColor="#FFFFFF"
                    android:layout_marginBottom="24dp"
                    app:layout_constraintBottom_toTopOf="@+id/SpinnerDeptoFuncUp"/>

            <Button
                    android:text="@string/atualizar"
                    android:layout_width="192dp"
                    android:layout_height="51dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/buttonAtualizarFunc"
                    android:background="@drawable/button_customized_depto"
                    app:layout_constraintHorizontal_bias="0.552"
                    android:textColor="#FFFFFF"
                    android:textAllCaps="false" app:layout_constraintBottom_toTopOf="@+id/buttonDeletarFunc"
                    android:layout_marginBottom="28dp"/>


            <Spinner
                    android:id="@+id/SpinnerDeptoFuncUp"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/spinner_custon"
                    android:focusableInTouchMode="false"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    android:layout_marginBottom="60dp"
                    app:layout_constraintBottom_toTopOf="@+id/buttonAtualizarFunc"/>
            <Button
                    android:text="@string/deletar"
                    android:layout_width="192dp"
                    android:layout_height="51dp"
                    android:textAllCaps="false"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/button_customized_depto"
                    android:id="@+id/buttonDeletarFunc"
                    android:layout_marginBottom="36dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.552"/>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>