<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        tools:context=".ui.activity.FuncionarioInputActivity"
        android:background="@color/colorPrimary">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true" android:layout_marginTop="16dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/novo_funcion_rio"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/TextViewNovoFuncionario"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:textColor="#FFFFFF"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="36dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/editTextNomeFuncionario"
                    app:layout_constraintVertical_bias="0.0"/>

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="67dp"
                    android:inputType="textPersonName|textCapSentences"
                    android:hint="@string/nome"
                    android:textColorHint="@color/colorWhite"
                    android:ems="10"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:id="@+id/editTextNomeFuncionario"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:textColor="#FFFFFF" android:layout_marginBottom="24dp"
                    app:layout_constraintBottom_toTopOf="@+id/editTextRgFuncionario"/>

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="67dp"
                    android:inputType="number"
                    android:hint="@string/rg"
                    android:textColorHint="@color/colorWhite"
                    android:ems="10"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:id="@+id/editTextRgFuncionario"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:textColor="#FFFFFF"
                    android:layout_marginBottom="24dp" app:layout_constraintBottom_toTopOf="@+id/spinnerFuncionario"/>

            <Button
                    android:text="@string/salvar"
                    android:layout_width="192dp"
                    android:layout_height="51dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/buttonSalvarFuncionario"
                    android:background="@drawable/button_customized_depto"
                    app:layout_constraintHorizontal_bias="0.552"
                    android:textColor="#FFFFFF"
                    android:textAllCaps="false"
                    android:layout_marginBottom="40dp"
                    app:layout_constraintBottom_toTopOf="@+id/butonCancelarFuncionario"/>


            <Spinner
                    android:id="@+id/spinnerFuncionario"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/spinner_custon"
                    android:focusableInTouchMode="false"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:layout_marginBottom="48dp"
                    app:layout_constraintBottom_toTopOf="@+id/buttonSalvarFuncionario"/>
            <Button
                    android:text="@android:string/cancel"
                    android:layout_width="192dp"
                    android:layout_height="51dp"
                    android:textAllCaps="false"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/button_customized_depto"
                    android:id="@+id/butonCancelarFuncionario"
                    android:layout_marginBottom="44dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.552"/>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>